1. Fix known bugs