@@ -7,7 +7,7 @@
   },
   "package": {
     "productName": "TikMatrix",
-    "version": "2.2.4"
+    "version": "2.2.5"
   },
   "tauri": {
     "allowlist": {
