@@ -505,8 +505,19 @@ export const i18n = createI18n({
       applied: 'Applied',
       adjustScreenSize: 'Adjust Screen Size',
       screenScaled: 'Screen Scaled',
+      adjustResolution: 'Adjust Resolution',
+      lowResolution: 'Low',
+      highResolution: 'High',
+      ultraResolution: 'Ultra',
+      fullHD: 'Full HD',
+      customResolution: 'Custom Resolution',
+      resolutionNote: 'Higher resolution provides better image quality but may affect performance.',
     },
     'zh-CN': {
+      adjustResolution: '调整分辨率',
+      lowResolution: '低分辨率',
+      highResolution: '高分辨率',
+      ultraResolution: '超清分辨率',
       adjustScreenSize: '调整屏幕尺寸',
       screenScaled: '屏幕缩放',
       applied: '已应用',
@@ -959,6 +970,9 @@ export const i18n = createI18n({
       uploadToGallery: '上传到相册',
       openIpChecker: '打开 IP 检查器',
       initAppAgent: '初始化 Agent',
+      fullHD: '全高清',
+      customResolution: '自定义分辨率',
+      resolutionNote: '更高的分辨率提供更好的图像质量，但可能会影响性能。',
     },
 
   }
