@@ -1,1 +1,3 @@
-1. Fix known bugs
+1. Added screen resolution adjustment feature, supporting low (256px), high (512px), ultra (720px), and full HD (1080px) resolution options, with custom resolution input support
+2. Improved device display size adjustment with percentage slider control
+3. Fixed known issues
